# realtime-analytics-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/workflows/: ai-review-fix.yml  auto-merge.yml  ci.yml  labeler.yml
deploy/docker/backend/: Dockerfile
deploy/docker/frontend/: Dockerfile
scripts/: auto_pr.sh
src/backend/: pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 92d5ea581eda_create_base_tables.py  92d5ea581eda_init_users_and_metrics.py
src/backend/app/: main.py
src/backend/app/api/: __init__.py  auth.py  metrics.py
src/backend/app/core/: config.py  security.py
src/backend/app/db/: base.py  seed.py  session.py
src/backend/app/dependencies/: __init__.py  auth.py
src/backend/app/models/: __init__.py  base.py  metric.py  user.py
src/backend/app/schemas/: metrics.py
src/backend/app/services/: generator.py
src/backend/app/tests/: conftest.py  test_auth.py  test_health.py
src/backend/app/ws/: metrics.py
src/frontend/: package.json  pnpm-lock.yaml
src/frontend/src/: App.css  App.tsx  index.css
src/frontend/src/components/: MetricChart.tsx
src/frontend/src/hooks/: useAuth.ts
src/frontend/src/lib/: api.ts  ws.ts
src/frontend/src/pages/: Dashboard.css  Dashboard.tsx  Login.css  Login.tsx
