[tool.poetry]
name = "realtime-analytics-backend"
version = "0.1.0"
description = "FastAPI backend for the Realtime Analytics Dashboard"
authors = ["Realtime Analytics Team <dev@localhost>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
sqlalchemy = "^2.0.29"
psycopg = { extras = ["binary", "pool"], version = "^3.1.19" }
alembic = "^1.13.1"
redis = "^5.0.3"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
