[project]
name = "realtime-analytics-backend"
version = "0.1.0"
description = "FastAPI backend for the Realtime Analytics Dashboard"
authors = [{ name = "Realtime Analytics Team", email = "dev@localhost" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.29,<0.30",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "sqlalchemy>=2.0.29,<3",
    "psycopg[binary,pool]>=3.1.19,<4",
    "alembic>=1.13.1,<2",
    "redis>=5.0.3,<6",
    "httpx>=0.27,<0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9",
    "pytest-asyncio>=0.23.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "alembic", "alembic.ini", "pyproject.toml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.4.2",
]
